prevent text overlapping

--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -285,8 +285,16 @@
       width: 50%;
       padding: 4px;
 
+      img {
+        float: left;
+      }
+
       &:after {
         content: attr(profile-header-text);
+        text-overflow: ellipsis;
+        display: block;
+        overflow: hidden;
+        white-space: nowrap;
       }
     }
 
